Fix for proper wrapping of right aligned images.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtPlatform/trunk@7593 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/nti/contentrendering/zpts/Themes/AoPS/styles/prealgebra.css
+++ b/src/nti/contentrendering/zpts/Themes/AoPS/styles/prealgebra.css
@@ -339,6 +339,7 @@ html {
 		position: relative;
 		margin-bottom: 30px;
 		background: #E7E7E8 url(../styles/sidebar-important.png) no-repeat 10px 5px !important; 
+		overflow: hidden;
 }
 
 #NTIContent div.picdefns:after,
@@ -670,9 +671,11 @@ html {
 /* He wants things on the left, regardless of what the text
  * says or what the result is.
  */
+/* Changed due to AoPS request.
+ */
 #NTIContent .rightpic{
-	float: left;
-	clear: left;
+	float: right;
+	clear: right;
 }
 #NTIContent .leftpic{
 	float: left;
